[FIX] Remove too wide class

--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -1,7 +1,3 @@
-.form-control {
-    height: auto;
-}
-
 .content-wrapper {
     background: #fcfcfc;
 }
